# cis-bidsify

./: .zenodo.json  Dockerfile  README.md  bidsconvert.sh  bidsify.py  build_image.sh  clean_metadata.py  complete_jsons.py  setup.cfg  setup.py  utils.py  workflow.py
.circleci/: config.yml
bidsify/: __about__.py  __init__.py  _version.py  bidsify.py  info.py  utils.py
scripts/: bidsconvert.sh  clean_metadata.py
