[metadata]
description-file = README.md
author = FIU-Neuro developers
copyright = Copyright 2020--now, FIU-Neuro developers
license = Apache 2.0
maintainer = Taylor Salo
email = tsalo006@fiu.edu
status = Prototype
url = https://github.com/FIU-Neuro/cis-bidsify
packagename = bidsify
description= cis-bidsify: Functions for BIDS datasets
long_description = file:README.md
long_description_content_type = text/x-md
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console'
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache 2.0 License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    bidsutils @ git+https://github.com/FIU-Neuro/cis-bidsutils.git
    datalad<0.13.0
    heudiconv @ git+https://github.com/tsalo/heudiconv.git
    numpy
    pandas
    pybids>=0.10.2
    python-dateutil
    scipy

[options.extras_require]
duecredit = duecredit
test =
    codecov
    coverage
    coveralls
    flake8
    pytest
    pytest-cov
docs =
    m2r
    numpydoc
    sphinx>=1.5.3
    sphinx-argparse
    sphinx_rtd_theme
style =
   flake8
all =
    %(docs)s
    %(duecredit)s
    %(style)s
    %(test)s

[options.package_data]
bidsify =
    tests/data/*
    resources/*

[options.exclude_package_data]
* =
    examples
[options.entry_points]
console_scripts =
    bidsify=bidsify.bidsify:_main

[versioneer]
VCS = git
style = pep440
versionfile_source = bidsify/_version.py
versionfile_build = bidsify/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 99
exclude=*build/,tests,**/__init__.py,*/__about__.py,*/_version.py
ignore = E126,E402,W503
